tf0024 tree classifer tf0025 tf-mlp classier all using json data

--- a/TF018.ipynb
+++ b/TF018.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -163,21 +163,46 @@
        "4   1.62      650  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "wine_data = pd.read_csv(\"datasets/wine/wine_train.csv\")\n",
-    "wine = wine_data.drop(\"Cultivator\", axis=1) # drop labels for training set\n",
     "wine_targets = wine_data[\"Cultivator\"].copy()\n",
+    "wine = wine_data.drop(\"Cultivator\", axis=1) # drop labels for training set\n",
     "wine.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    1\n",
+       "2    1\n",
+       "3    1\n",
+       "4    3\n",
+       "Name: Cultivator, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_targets.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -230,15 +255,11 @@
     "from sklearn.compose import ColumnTransformer\n",
     "#from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "num_attribs = list(wine)\n",
-    "pprint(num_attribs)\n",
+    "attribs_labels = list(atributes)\n",
+    "pprint(attribs_labels)\n",
     "\n",
     "# Replace any missing values with the median value\n",
     "# Nomalize all the data\n",
-    "# This is all done on the numeric data so:\n",
-    "# housing_num = housing.drop('ocean_proximity', axis=1)\n",
-    "# num_attribs = list(housing_num)\n",
-    "#cat_attribs = [\"Cultivator\"]\n",
     "\n",
     "num_pipeline = Pipeline([\n",
     "        ('imputer', SimpleImputer(strategy=\"median\")),\n",
@@ -247,14 +268,14 @@
     "\n",
     "\n",
     "full_pipeline = ColumnTransformer([\n",
-    "        (\"num\", num_pipeline, num_attribs),\n",
+    "        (\"num\", num_pipeline, attribs_labels),\n",
     "#        (\"cat\", OneHotEncoder(), cat_attribs),\n",
     "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +305,7 @@
        "        0.20371867]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,6 +313,13 @@
    "source": [
     "wine_prepared"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
