add ge component

--- a/SplitData-02-22-19.ipynb
+++ b/SplitData-02-22-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "4             4.32  1.04   2.93      735  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -214,13 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
-    "split = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=42)\n",
+    "split = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=7)\n",
     "for train_index, test_index in split.split(wine, wine[\"Cultivator\"]):\n",
     "    strat_train_set = wine.loc[train_index]\n",
     "    strat_test_set = wine.loc[test_index]"
@@ -228,17 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "strat_train_set.to_csv(\"datasets/wine/wine_train.csv\",index=False)\n",
-    "strat_test_set.to_csv(\"datasets/wine/wine_test.csv\",index=False)"
+    "strat_train_set.to_csv(\"datasets/wine/wine_train_7.csv\",index=False)\n",
+    "strat_test_set.to_csv(\"datasets/wine/wine_test_7.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "Name: Cultivator, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,16 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f56496562e8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fee277ecc18>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
